Fix for modal box button on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ h1 {
   .content p {
     font-size: 0.8rem; }
 
-  .play-again, .return-home {
+  .play-again, .next-level, .return-home {
     padding: 0.5rem;
     font-size: 0.8rem; }
 
